add icp-query
